tests/ui/windows-subsystem/windows-subsystem-invalid.rs
#![windows_subsystem = "wrong"]
//~^ ERROR malformed `windows_subsystem` attribute input [E0539]

fn main() {}
<<<<<<< HEAD

//~? ERROR invalid windows subsystem `wrong`

// ferrocene-annotations: fls_1l4mnlfk5rr2
// Attribute windows_subsystem
||||||| 6840234806e

//~? ERROR invalid windows subsystem `wrong`
=======
>>>>>>> pull-upstream-temp--do-not-use-for-real-code
